chore: Clean up